--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,24 +9,17 @@
     android:padding="10dp"
     android:orientation="vertical">
 
-    <com.stripe.android.view.CardMultilineWidget
-        android:id="@+id/card_input"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/holder_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Card holder name"
-        android:layout_gravity="start"
-        android:layout_marginTop="24dp"/>
-
     <Button
         android:id="@+id/pay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:text="Pay"/>
+
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 </LinearLayout>
